<resources>
    <string name="app_name">TodoApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="statistics_own_shared">Own / Shared</string>
    <string name="statistics_status_own">Status of\nOwn Todos</string>
    <string name="statistics_status_shared">Status of\nShared Todos</string>
    <string name="error_api_general">API Error. (Check login/token!)</string>
    <string name="error_data_processing">Data processing error: %1$s</string>
    <string name="error_network">Network error occurred: %1$s</string>
    <string name="title_statistics">Statistics</string>
    <string name="statistics_no_general_data">No statistics to display</string>
    <string name="statistics_no_priority_data">Create todos to see priority levels</string>
    <string name="statistics_no_todos">No todos available yet</string>
    <string name="statistics_no_own_todos">No own todos to analyze</string>
    <string name="statistics_no_shared_todos">No shared todos yet</string>
    <string name="label_own">Own</string>
    <string name="label_not_required">Not\nRequired</string>
    <string name="label_low">Low</string>
    <string name="label_normal">Normal</string>
    <string name="label_high">High</string>
    <string name="label_critical">Critical</string>
    <string name="label_shared">Shared</string>
    <string name="label_finished">Finished</string>
    <string name="label_unfinished">Unfinished</string>
    <string name="label_total">Total</string>
    <string name="label_total_count">Total: %1$d</string>
    <string name="label_finished_count">Finished: %1$d</string>
    <string name="label_unfinished_count">Unfinished: %1$d</string>
    <string name="label_search">Search todos</string>
    <string name="label_add_new_todo">Add new Todo</string>

    <string name="title_todos">Todos</string>
    <string name="title_my_todos">My Todos</string>
    <string name="title_shared_todos">Shared Todos</string>
    <string name="title_all_todos">All Todos</string>
    <string name="label_page_info">Page %1$d of %2$d</string>
    <string name="desc_prev_page">Previous Page</string>
    <string name="desc_next_page">Next Page</string>
    <string name="title_settings">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_profile_settings">Profile Settings</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_system">System</string>
    <string name="settings_light">Light</string>
    <string name="settings_dark">Dark</string>
    <string name="settings_logout">Logout</string>
</resources>